--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="main-header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="images/LOGO.png" alt="BEHS NO.1 (PYAY) Logo">
+                <img src="LOGO.png" alt="BEHS NO.1 (PYAY) Logo">
                 <span>BEHS NO.1 (PYAY)</span>
             </a>
             <nav class="main-nav">
