--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | BEHS NO.1 (PYAY)</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <header class="main-header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="images/logo.png" alt="BEHS NO.1 (PYAY) Logo">
+                <img src="LOGO.png" alt="BEHS NO.1 (PYAY) Logo">
                 <span>BEHS NO.1 (PYAY)</span>
             </a>
             <nav class="main-nav">
@@ -98,6 +98,6 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
