--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#">Academics</a></li>
                     <li><a href="#">Admissions</a></li>
                     <li><a href="#">Student Life</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             <button class="menu-toggle" aria-label="Toggle navigation menu">
@@ -110,7 +110,7 @@
             <div class="footer-content">
                 <div class="footer-section about">
                     <a href="index.html" class="logo">
-                        <img src="images/logo.png" alt="BEHS NO.1 (PYAY) Logo">
+                        <img src="LOGO.png" alt="BEHS NO.1 (PYAY) Logo">
                         <span>BEHS NO.1 (PYAY)</span>
                     </a>
                     <p>Nurturing the next generation of innovators and leaders since 1973.</p>
@@ -127,7 +127,7 @@
                         <li><a href="#">Academics</a></li>
                         <li><a href="#">Student Life</a></li>
                         <li><a href="#">News & Events</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="footer-section contact">
