--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | BEHS NO.1 (PYAY)</title>
+    <title>Contact Us | BEHS NO.1 (PYAY)</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,11 +21,11 @@
             <nav class="main-nav">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html" class="active">About Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="#">Academics</a></li>
                     <li><a href="#">Admissions</a></li>
                     <li><a href="#">Student Life</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html" class="active">Contact</a></li>
                 </ul>
             </nav>
             <button class="menu-toggle" aria-label="Toggle navigation menu">
@@ -39,22 +39,47 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Our Mission & History</h1>
+                <h1>Contact Us</h1>
             </div>
         </section>
 
         <section class="page-content">
-            <div class="container content-flex" data-animate>
-                <div class="content-text">
-                    <h2>Our Mission</h2>
-                    <p>To empower students to achieve their full potential and become compassionate, critical thinkers, and responsible global citizens. We are dedicated to providing a challenging and supportive learning environment that encourages intellectual curiosity and personal growth.</p>
-                    
-                    <h2>Our History</h2>
-                    <p>Founded in 1973, BEHS NO.1 (PYAY) was established with a vision to create a center for academic excellence in the heart of our community. From our humble beginnings with just 200 students, we have grown into a leading institution serving over 1,500 students, with a rich history of achievement in academics, arts, and athletics.</p>
-                    <p>Our campus has evolved over the years, but our core values of integrity, respect, and community have remained unchanged.</p>
+            <div class="container contact-grid" data-animate>
+                <div class="contact-form-container">
+                    <h2>Send Us a Message</h2>
+                    <p>Have a question or want to learn more? Fill out the form below, and we'll get back to you as soon as possible.</p>
+                    <form action="#" method="POST" class="contact-form">
+                        <div class="form-group">
+                            <label for="name">Full Name</label>
+                            <input type="text" id="name" name="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email Address</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="subject">Subject</label>
+                            <input type="text" id="subject" name="subject" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" rows="5" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Send Message</button>
+                    </form>
                 </div>
-                <div class="content-image">
-                    <img src="images/about-us-image.jpg" alt="View of the school campus">
+                <div class="contact-info-container">
+                    <h2>Contact Information</h2>
+                    <p>You can also reach us through the following channels. We look forward to hearing from you!</p>
+                    <div class="contact-details">
+                        <p><i class="fas fa-map-marker-alt"></i> 123 Education Lane, Springfield, USA</p>
+                        <p><i class="fas fa-phone"></i> (123) 456-7890</p>
+                        <p><i class="fas fa-envelope"></i> info@springfieldhigh.edu</p>
+                    </div>
+                    <h2>Find Us</h2>
+                    <div class="map-container">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d496.73867545507835!2d95.22009425081366!3d18.823273027750545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30c78363b1a140d7%3A0x816e1728f8eac4b0!2sNo(1).%20Basic%20Education%20High%20School%2C%20Pyay!5e0!3m2!1sen!2smm!4v1752321120628!5m2!1sen!2smm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </div>
             </div>
         </section>
