--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                 <div class="contact-form-container">
                     <h2>Send Us a Message</h2>
                     <p>Have a question or want to learn more? Fill out the form below, and we'll get back to you as soon as possible.</p>
-                    <form action="#" method="POST" class="contact-form">
+                    <form action="#" method="POST" class="contact-form" netlify>
                         <div class="form-group">
                             <label for="name">Full Name</label>
                             <input type="text" id="name" name="name" required>
