--- a/contact.html
+++ b/contact.html
@@ -72,13 +72,13 @@
                     <h2>Contact Information</h2>
                     <p>You can also reach us through the following channels. We look forward to hearing from you!</p>
                     <div class="contact-details">
-                        <p><i class="fas fa-map-marker-alt"></i> 123 Education Lane, Springfield, USA</p>
-                        <p><i class="fas fa-phone"></i> (123) 456-7890</p>
-                        <p><i class="fas fa-envelope"></i> info@springfieldhigh.edu</p>
+                        <p><i class="fas fa-map-marker-alt"></i> No. 1 Basic Education High School, Pyay, Bago Region, Myanmar</p>
+                        <p><i class="fas fa-phone"></i> +95 XX XXX XXXX (Main Office)</p>
+                        <p><i class="fas fa-envelope"></i> contact@behs1pyay.edu.mm</p>
                     </div>
                     <h2>Find Us</h2>
                     <div class="map-container">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d496.73867545507835!2d95.22009425081366!3d18.823273027750545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30c78363b1a140d7%3A0x816e1728f8eac4b0!2sNo(1).%20Basic%20Education%20High%20School%2C%20Pyay!5e0!3m2!1sen!2smm!4v1752321120628!5m2!1sen!2smm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d496.73867545507835!2d95.22009425081366!3d18.823273027750545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30c78363b1a140d7%3A0x816e1728f8eac4b0!2sNo(1).%20Basic%20Education%20High%20School%2C%20Pyay!5e0!3m2!1sen!2smm!4v1752321120628!5m2!1sen!2smm" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
@@ -112,9 +112,9 @@
                 </div>
                 <div class="footer-section contact">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-map-marker-alt"></i> 123 Education Lane, Springfield, USA</p>
-                    <p><i class="fas fa-phone"></i> (123) 456-7890</p>
-                    <p><i class="fas fa-envelope"></i> info@springfieldhigh.edu</p>
+                    <p><i class="fas fa-map-marker-alt"></i> No. 1 B.E.H.S, Pyay, Myanmar</p>
+                    <p><i class="fas fa-phone"></i> +95 XX XXX XXXX</p>
+                    <p><i class="fas fa-envelope"></i> contact@behs1pyay.edu.mm</p>
                 </div>
             </div>
             <div class="footer-bottom">
