--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                 </div>
                 <div class="footer-section contact">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-map-marker-alt"></i> 123 Education Lane, Springfield, USA</p>
-                    <p><i class="fas fa-phone"></i> (123) 456-7890</p>
-                    <p><i class="fas fa-envelope"></i> info@springfieldhigh.edu</p>
+                    <p><i class="fas fa-map-marker-alt"></i> No. 1 B.E.H.S, Pyay, Myanmar</p>
+                    <p><i class="fas fa-phone"></i> +95 XX XXX XXXX</p>
+                    <p><i class="fas fa-envelope"></i> contact@behs1pyay.edu.mm</p>
                 </div>
             </div>
             <div class="footer-bottom">
